# MushOS

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  README_8md.html  build.sh  check__kernel__sectors_8py.html  check__kernel__sectors_8py.js  check__kernel__sectors_8py_source.html  compile_functions.cmake  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.js  dir_67680528e370de92cf4f66d51e81c5e7.html  dir_67680528e370de92cf4f66d51e81c5e7.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_98b0b4f2b7ada084522cf3f9258d0075.html  dir_abe9897a1d0218937c5f9306d8befc9c.html  dir_abe9897a1d0218937c5f9306d8befc9c.js  dir_d6f19446fd66376dca27abb0122f13dd.html  dir_d6f19446fd66376dca27abb0122f13dd.js  dir_e65f4bf4cd961ee03127cc3437d52c5e.html  dir_e65f4bf4cd961ee03127cc3437d52c5e.js  disk_8asm.html  disk_8asm_source.html  exceptions_8c.html  exceptions_8c_source.html  exceptions_8h.html  exceptions_8h_source.html  files.html  files.js  generic_8h.html  generic_8h.js  (+140 more)
.github/workflows/: analyze.yml  build.yml  doc.yml  test  test.yml
MushCore/: Makefile
MushCore/boot/: loader.asm
MushCore/drivers/: file_system.asm  file_system.c  file_system.h  keyboard.c  navigator.c  navigator.h  ports_io.h  screen.c  screen.h
MushCore/kernel/: interruption_tables.c  interruption_tables.h  interruptions.h  kernel.c  memory_map.c  pages.c  pages.h  placement.c  placement.h  timer.c  timer.h
MushCore/mushlib/: heap.c  memory.h  stdio.c  string.c  syscall.h  vararg.c
MushCreator/: Makefile  main.c  presets.h
MushCreator/adapter/: adapter.c  adapter.h  driver_proxy.c  driver_proxy.h
MushCreator/file_system/: file_input.c  file_input.h  file_output.c  file_output.h  structures.h
MushCreator/utils/: math_utils.c  string_utils.c  string_utils.h
MushDome/Sputnik/: Makefile  code.asm  main.c
MushDome/Sputnik/code/: main.c
MushLib/: heap.c  heap.h  memory.h  stdio.c  stdio.h  string.c  string.h  syscall.h  vararg.c
boot/: kernel_follower.asm  kernel_gate.asm  loader.asm
core/: CMakeLists.txt  Makefile
core/boot/: grub_loader.asm  kernel_gate.asm  loader.asm
core/drivers/: disk.asm  keyboard.c  keyboard.h  ports_io.asm  ports_io.h  screen.c  screen.h  vfs.c  vfs.h
core/kernel/: heap.c  interruption_tables.c  interruption_tables.h  interruptions.asm  interruptions.h  kernel.c  kernel.h  memory_map.c  modules.c  modules.h  pages.c  pages.h  placement.c  placement.h  task.c  task.h  timer.c  timer.h  utils.asm
docs/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  header.html
docs/assets/: logo.drawio  memory_map.drawio
docs/sources/: design_notes.md  memory_map.md
drivers/: file_system.asm  file_system.h  keyboard.c  navigator.h  ports_io.asm  ports_io.h  screen.c  screen.h  timer.c  timer.h
kernel/: descriptor_tables.c  descriptor_tables.h  descriptors.asm  descriptors.h  generic.h  heap.c  heap.h  interruption_tables.c  interruptions.c  interruptions.h  kernel.c  pages.c  pages.h  timer.c  utils.c  utils.h
lib/: CMakeLists.txt  Makefile  generic.h  heap.h  math.h  memory.c  stdio.c  syscall.h  vararg.h
lib/base/: exceptions.c  exceptions.h  format.c  generic.h  heap.c  heap.h  math.c  math.h  memory.c  memory.h  stdio.c  stdio.h  string.c  string.h  syscall.h  vararg.c  vararg.h
lib/code/: generic.h  heap.c  heap.h  math.h  stdio.c  stdio.h  string.h  syscall.h
mushlib/: array_list.c  array_list.h  heap.h  linked_list.c  linked_list.h  logger.c  logger.h  memory.c  memory.h  stdio.c  stdio.h  string.c  string.h  vararg.h
scripts/: _utils.py  build_mushlib_header.py  check_kernel_sectors.py  requirements.txt
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_12.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  (+87 more)
tests/: CMakeLists.txt  integrator.c  integrator.h
tests/lib/: format.c  generic.c  string.c  vararg.c
